<resources>
    <string name="app_name">Finnish-English Slang Dictionary</string>
    <string name="app_name_abr">FinEng Slang</string>
    <string name="search_button">Search A Word</string>
    <string name="quiz_button">Take A Quiz</string>
    <string name="search_activity_button">Search</string>
    <string name="word_of_the_day_textview">Word of the day</string>
    <string name="btn_check_progress">Check Your Progress</string>
    <string name="translation_txt">translation</string>
    <string name="next_btn">Next</string>
    <string name="finished_txt">Time\'s up!</string>
    <string name="user_score">Your score is</string>
    <string name="score_announcement">0</string>
    <string name="total_points">Your total points until now is</string>
    <string name="total_point_announcement">0</string>
    <string name="match_button">Matching Game</string>
    <string name="empty"> </string>
    <string name="reset_button">Reset</string>
    <string name="card">Card for game</string>
    <string name="heart">Heart for game</string>
    <string name="search_result_activity_layout2_txt">No word found</string>
    <string name="word_of_the_day">Word of The Day</string>
    <string name="time_picker">Pick time</string>
    <string name="cancel_alarm">Cancel Alarm</string>
    <string name="set_alarm">No Alarm set </string>
    <string name="setting_btn">Settings</string>
    <string name="played">Games Played</string>
    <string name="won">Games Won</string>
</resources>